--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
     "@types/express-jwt": "^6.0.3",
+    "@types/graphql-upload": "^8.0.7",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.7",
     "@types/uuid": "^8.3.3",
@@ -28,6 +29,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "graphql": "15.3",
+    "graphql-upload": "^13.0.0",
     "ioredis": "^4.28.2",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
